--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   in_app_review: ^2.0.8
   flutter_app_badger: ^1.5.0
   email_validator: ^2.1.17
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
