Query interpretation and mobile persistence looking solid now

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,11 @@
 # Local development
 IS_LOCAL=true
 WEBSITE_URL=http://localhost:3000
+# Set to false if you don't want to seed the db every time (will still run on creation)
+DATABASE_SEED=true
 
 # Neon Database
 NEON_API_KEY=
-
-# Vector DB Table for document embeddings (dimensions must match the model)
-VECTOR_DB_DOCS_TABLE=documents
-VECTOR_DB_DOCS_DIMENSIONS=1536
-
-# OpenAI
-OPENAI_API_KEY=
-
-# LLM
-LLM_PROMPT_MODEL_NAME=gpt-3.5-turbo
-LLM_CHAT_MODEL_NAME=gpt-3.5-turbo
-LLM_COMPLETIONS_MODEL_NAME=gpt-3.5-turbo-16k
-LLM_EMBEDDINGS_MODEL_NAME=text-embedding-ada-002
 
 # Replicate AI
 REPLICATE_API_KEY=
@@ -42,11 +31,6 @@ APPLE_TEAM_ID=
 
 # Google Auth
 GOOGLE_CLIENT_ID=266624499548-t02vg7n4rviop9g2bsctkvu0na04d23h.apps.googleusercontent.com
-
-# Removing facebook login for now due to problems with business verification
-# # Facebook Auth
-# FACEBOOK_CLIENT_ID=219154671082505
-# FACEBOOK_CLIENT_SECRET=
 
 # Email Auth
 EMAIL_FROM=postmaster@revelationsai.com
