--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   http: ^1.1.0
   go_router: ^10.1.2
   shared_preferences: ^2.2.1
-  analyzer: ^6.2.0
   intl: ^0.18.1
   url_launcher: ^6.1.14
   nanoid: ^1.0.0
@@ -68,6 +67,9 @@ dependencies:
   image_picker: ^1.0.4
   path: ^1.8.3
   image_cropper: ^5.0.0
+  isar: ^3.1.0
+  isar_flutter_libs: ^3.1.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -75,12 +77,14 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   riverpod_generator: ^2.3.1
-  build_runner: ^2.4.6
+  build_runner: any
   custom_lint: ^0.5.3
   riverpod_lint: ^2.0.3
   json_serializable: ^6.7.1
   flutter_launcher_icons: ^0.13.1
   change_app_package_name: ^1.1.0
+  isar_generator: ^3.1.0
+  analyzer: ^5.13.0
 
 flutter_launcher_icons:
   ios: true
