--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -35,6 +35,7 @@
     "pug": "^3.0.2",
     "puppeteer-core": "^20.9.0",
     "stripe": "^13.11.0",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
 }
