Add caching to langchain

--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,6 @@ STRIPE_WEBHOOK_SECRET=
 NEW_RELIC_ACCOUNT_ID=4177830
 NEW_RELIC_TRUSTED_ACCOUNT_KEY=4177830
 NEW_RELIC_LICENSE_KEY_SECRET_ARN=
+
+UPSTASH_REDIS_URL=
+UPSTASH_REDIS_TOKEN=
