--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -60,6 +60,9 @@ env:
   NEW_RELIC_TRUSTED_ACCOUNT_KEY: ${{ vars.NEW_RELIC_TRUSTED_ACCOUNT_KEY }}
   NEW_RELIC_LICENSE_KEY_SECRET_ARN: ${{ vars.NEW_RELIC_LICENSE_KEY_SECRET_ARN }}
 
+  UPSTASH_REDIS_URL: ${{ vars.UPSTASH_REDIS_URL }}
+  UPSTASH_REDIS_TOKEN: ${{ secrets.UPSTASH_REDIS_TOKEN }}
+
   ENCODED_FIREBASE_JSON: ${{ secrets.ENCODED_FIREBASE_JSON }}
 
 jobs:
