--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   path_provider: ^2.1.1
   google_mobile_ads: ^3.1.0
   cached_network_image: ^3.3.0
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
