--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -69,18 +69,15 @@ jobs:
       - id: checkout
         name: Checkout
         uses: actions/checkout@v3
-      - id: setup_node
-        name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18.x"
-          cache: "npm"
+      - id: setup_bun
+        name: Setup Bun.js
+        uses: oven-sh/setup-bun@v1
+      - id: install_deps
+        name: Install dependencies
+        run: bun install
       - id: setup_jq
         name: Setup jq
         run: sudo apt-get install jq
-      - id: install_node_deps
-        name: Install Node.js dependencies
-        run: npm ci
       - id: setup_firebase_creds
         name: Setup Firebase Credentials
         run: |
@@ -91,7 +88,7 @@ jobs:
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - id: sst_deploy
         name: Deploy to AWS
-        run: npx sst deploy --stage pr-${{ github.event.pull_request.number }}
+        run: bunx sst deploy --stage pr-${{ github.event.pull_request.number }}
       - id: extract_website_url
         name: Extract website URL
         run: |
