--- a/package.json
+++ b/package.json
@@ -16,33 +16,29 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/cfn-response": "^1.0.8",
     "@types/in-app-purchase": "^1.11.4",
-    "@types/node": "^20.8.10",
-    "@types/pg": "^8.10.8",
+    "@types/node": "^20.9.0",
+    "@types/pg": "^8.10.9",
     "aws-cdk-lib": "2.101.1",
     "constructs": "10.2.69",
-    "drizzle-kit": "^0.19.13",
-    "sst": "2.35.1",
+    "drizzle-kit": "0.20.2",
+    "sst": "2.36.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.441.0",
-    "@aws-sdk/client-s3": "^3.441.0",
-    "@aws-sdk/client-sqs": "^3.441.0",
-    "@aws-sdk/credential-providers": "^3.444.0",
-    "@aws-sdk/s3-request-presigner": "^3.441.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.451.0",
+    "@aws-sdk/client-s3": "^3.451.0",
+    "@aws-sdk/client-sqs": "^3.451.0",
+    "@aws-sdk/credential-providers": "^3.451.0",
+    "@aws-sdk/s3-request-presigner": "^3.451.0",
     "@neondatabase/serverless": "^0.6.0",
-    "drizzle-orm": "^0.28.6",
+    "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
-    "langchain": "^0.0.182-rc.1",
+    "html-to-text": "^9.0.5",
+    "langchain": "^0.0.189",
     "neon-sdk": "^1.14.0",
     "pg": "^8.11.3",
     "replicate": "^0.21.1",
     "zod": "^3.22.4"
-  },
-  "overrides": {
-    "langchain": {
-      "replicate": "$replicate"
-    }
   },
   "workspaces": [
     "packages/*"
