--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -10,20 +10,20 @@
     "@sparticuz/chromium": "^114.0.0",
     "@types/aws-lambda": "^8.10.126",
     "@types/bcryptjs": "^2.4.6",
-    "@types/busboy": "^1.5.2",
-    "@types/node": "^20.8.10",
-    "@types/nodemailer": "^6.4.13",
-    "sst": "2.35.1",
+    "@types/busboy": "^1.5.3",
+    "@types/node": "^20.9.0",
+    "@types/nodemailer": "^6.4.14",
+    "sst": "2.36.1",
     "vitest": "^0.33.0"
   },
   "dependencies": {
     "@apple/app-store-server-library": "^0.1.1",
-    "@middy/core": "^4.6.5",
-    "@middy/http-cors": "^4.6.5",
-    "@middy/http-error-handler": "^4.6.5",
-    "@revelationsai/core": "^1.0.0",
-    "@upstash/redis": "^1.24.3",
-    "ai": "^2.2.20",
+    "@middy/core": "^4.7.0",
+    "@middy/http-cors": "^4.7.0",
+    "@middy/http-error-handler": "^4.7.0",
+    "@revelationsai/core": "workspace:*",
+    "@upstash/redis": "^1.25.1",
+    "ai": "^2.2.23",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
@@ -31,7 +31,7 @@
     "firebase-admin": "^11.11.0",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
-    "openai": "^4.16.1",
+    "openai": "^4.18.0",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.2",
     "puppeteer-core": "^20.9.0",
