--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -17,9 +17,9 @@
   "devDependencies": {
     "@iconify/svelte": "^3.1.4",
     "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/kit": "^1.27.3",
+    "@sveltejs/kit": "^1.27.6",
     "@types/autosize": "^4.0.3",
-    "@types/validator": "^13.11.5",
+    "@types/validator": "^13.11.6",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.16",
@@ -32,11 +32,11 @@
     "postcss": "^8.4.31",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.2.2",
-    "svelte-check": "^3.5.2",
+    "svelte": "^4.2.3",
+    "svelte-check": "^3.6.0",
     "svelte-copy": "^1.4.1",
     "svelte-intersection-observer": "^0.10.1",
-    "svelte-kit-sst": "2.35.1",
+    "svelte-kit-sst": "2.36.1",
     "svelte-share-buttons-component": "^1.5.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.5",
@@ -48,9 +48,9 @@
   },
   "type": "module",
   "dependencies": {
-    "@revelationsai/core": "^1.0.0",
+    "@revelationsai/core": "workspace:*",
     "@tanstack/svelte-query": "^4.36.1",
-    "ai": "^2.2.20",
+    "ai": "^2.2.23",
     "autosize": "^6.0.1",
     "moment": "^2.29.4",
     "stripe": "^13.11.0",
