--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "langchain": "^0.0.189",
     "neon-sdk": "^1.14.0",
     "pg": "^8.11.3",
+    "pgvector": "^0.1.5",
     "replicate": "^0.21.1",
     "zod": "^3.22.4"
   },
