--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "pg": "^8.11.3",
     "pgvector": "^0.1.5",
     "replicate": "^0.21.1",
+    "youtube-transcript": "^1.0.6",
+    "youtubei.js": "^7.0.0",
     "zod": "^3.22.4"
   },
   "workspaces": [
