ci: update prod-android-build.yaml

--- a/.github/workflows/prod-android-build.yaml
+++ b/.github/workflows/prod-android-build.yaml
@@ -100,4 +100,4 @@ jobs:
           packageName: com.passgoco.revelationsai
           releaseFiles: mobile/build/app/outputs/bundle/release/app-release.aab
           track: production
-          changesNotSentForReview: ${{ !(github.event.inputs.sendForReview ?? true) }}
+          changesNotSentForReview: ${{ !github.event.inputs.sendForReview }}
