--- a/.github/workflows/prod-android-build.yaml
+++ b/.github/workflows/prod-android-build.yaml
@@ -11,11 +11,11 @@ on:
       - mobile/pubspec.lock
   workflow_dispatch:
     inputs:
-      sendForReview:
-        description: "Send for review"
+      changesNotSentForReview:
+        description: "Don't Send for review"
         required: false
         type: boolean
-        default: true
+        default: false
 
 env:
   FLUTTER_VERSION_CODE: ${{ github.run_number }}
@@ -100,4 +100,4 @@ jobs:
           packageName: com.passgoco.revelationsai
           releaseFiles: mobile/build/app/outputs/bundle/release/app-release.aab
           track: production
-          changesNotSentForReview: ${{ !github.event.inputs.sendForReview }}
+          changesNotSentForReview: ${{ inputs.changesNotSentForReview }}
