--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -31,7 +31,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.passgoco.revelationsai"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -53,7 +53,7 @@ android {
         applicationId "com.passgoco.revelationsai"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 24
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
