--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,12 +39,12 @@ dependencies:
   freezed: ^2.4.2
   json_annotation: ^4.8.1
   http: ^1.1.0
-  go_router: ^10.1.2
+  go_router: ^12.1.1
   shared_preferences: ^2.2.1
   intl: ^0.18.1
   url_launcher: ^6.1.14
   nanoid: ^1.0.0
-  uuid: ^3.0.7
+  uuid: ^4.2.1
   font_awesome_flutter: ^10.5.0
   flutter_spinkit: ^5.2.0
   share_plus: ^7.1.0
@@ -54,9 +54,9 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_messaging: ^14.6.7
   package_info_plus: ^4.1.0
-  flutter_web_auth_2: ^2.2.1
+  flutter_web_auth_2: ^3.0.4
   flutter_native_splash: ^2.3.2
-  purchases_flutter: ^5.7.0
+  purchases_flutter: ^6.3.0
   quiver: ^3.2.1
   another_flushbar: ^1.12.30
   visibility_detector: ^0.4.0+2
@@ -73,12 +73,13 @@ dependencies:
   google_mobile_ads: ^3.1.0
   cached_network_image: ^3.3.0
   image_gallery_saver: ^2.0.3
+  flutter_inappwebview: ^5.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   riverpod_generator: ^2.3.1
   build_runner: any
   custom_lint: ^0.5.3
@@ -87,7 +88,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   change_app_package_name: ^1.1.0
   isar_generator: ^3.1.0
-  analyzer: ^5.13.0
+  analyzer: any
 
 flutter_launcher_icons:
   ios: true
