--- a/.github/workflows/pr-preview-cleanup.yaml
+++ b/.github/workflows/pr-preview-cleanup.yaml
@@ -63,12 +63,14 @@ jobs:
       - id: checkout
         name: Checkout
         uses: actions/checkout@v3
-      - id: setup_bun
-        name: Setup Bun.js
-        uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: latest
+          run_install: false
       - id: install_deps
         name: Install dependencies
-        run: bun install
+        run: pnpm install
       - id: setup_firebase_creds
         name: Setup Firebase Credentials
         run: |
@@ -79,4 +81,4 @@ jobs:
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - id: sst_remove
         name: Remove SST deployment
-        run: bunx sst remove --stage pr-${{ github.event.pull_request.number }}
+        run: pnpx sst remove --stage pr-${{ github.event.pull_request.number }}
