--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -69,12 +69,14 @@ jobs:
       - id: checkout
         name: Checkout
         uses: actions/checkout@v3
-      - id: setup_bun
-        name: Setup Bun.js
-        uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: latest
+          run_install: false
       - id: install_deps
         name: Install dependencies
-        run: bun install
+        run: pnpm install
       - id: setup_jq
         name: Setup jq
         run: sudo apt-get install jq
@@ -88,7 +90,7 @@ jobs:
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - id: sst_deploy
         name: Deploy to AWS
-        run: bunx sst deploy --stage pr-${{ github.event.pull_request.number }}
+        run: pnpx sst deploy --stage pr-${{ github.event.pull_request.number }}
       - id: extract_website_url
         name: Extract website URL
         run: |
