--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -73,12 +73,14 @@ jobs:
       - id: checkout
         name: Checkout
         uses: actions/checkout@v3
-      - id: setup_bun
-        name: Setup Bun.js
-        uses: oven-sh/setup-bun@v1
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: latest
+          run_install: false
       - id: install_deps
         name: Install dependencies
-        run: bun install
+        run: pnpm install
       - id: setup_firebase_creds
         name: Setup Firebase Credentials
         run: |
@@ -89,4 +91,4 @@ jobs:
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - id: sst_deploy
         name: Deploy to AWS
-        run: bunx sst deploy --stage prod
+        run: pnpx sst deploy --stage prod
