--- a/package.json
+++ b/package.json
@@ -16,26 +16,25 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/cfn-response": "^1.0.8",
     "@types/in-app-purchase": "^1.11.4",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.10.0",
     "@types/pg": "^8.10.9",
-    "aws-cdk-lib": "2.101.1",
-    "constructs": "10.2.69",
+    "aws-cdk-lib": "2.110.1",
+    "constructs": "10.3.0",
     "drizzle-kit": "0.20.2",
-    "sst": "2.36.1",
-    "typescript": "^5.2.2"
+    "sst": "2.36.6",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.451.0",
-    "@aws-sdk/client-s3": "^3.451.0",
-    "@aws-sdk/client-sqs": "^3.451.0",
-    "@aws-sdk/credential-providers": "^3.451.0",
-    "@aws-sdk/s3-request-presigner": "^3.451.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.458.0",
+    "@aws-sdk/client-s3": "^3.458.0",
+    "@aws-sdk/client-sqs": "^3.458.0",
+    "@aws-sdk/credential-providers": "^3.458.0",
+    "@aws-sdk/s3-request-presigner": "^3.458.0",
     "@neondatabase/serverless": "^0.6.0",
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
-    "html-to-text": "^9.0.5",
-    "langchain": "^0.0.189",
-    "neon-sdk": "^1.14.0",
+    "langchain": "0.0.196",
+    "neon-sdk": "^1.15.0",
     "pg": "^8.11.3",
     "pgvector": "^0.1.5",
     "replicate": "^0.21.1",
