--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   timezone: ^0.9.2
   firebase_core: ^2.15.1
   firebase_messaging: ^14.6.7
-  package_info_plus: ^4.1.0
+  package_info_plus: ^5.0.1
   flutter_web_auth_2: ^3.0.4
   flutter_native_splash: ^2.3.2
   purchases_flutter: ^6.3.0
@@ -81,7 +81,7 @@ dev_dependencies:
 
   flutter_lints: ^3.0.1
   riverpod_generator: ^2.3.1
-  build_runner: any
+  build_runner: ^2.4.6
   custom_lint: ^0.5.3
   riverpod_lint: ^2.0.3
   json_serializable: ^6.7.1
