--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -52,6 +52,7 @@
     "@tanstack/svelte-query": "^4.36.1",
     "ai": "^2.2.25",
     "autosize": "^6.0.1",
+    "marked": "^10.0.0",
     "moment": "^2.29.4",
     "stripe": "^13.11.0",
     "uuid": "^9.0.1",
