--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
     "@types/pg": "^8.10.9",
     "aws-cdk-lib": "2.110.1",
     "constructs": "10.3.0",
-    "drizzle-kit": "0.20.2",
-    "sst": "2.36.6",
+    "drizzle-kit": "0.20.6",
+    "sst": "2.36.7",
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.458.0",
-    "@aws-sdk/client-s3": "^3.458.0",
-    "@aws-sdk/client-sqs": "^3.458.0",
-    "@aws-sdk/credential-providers": "^3.458.0",
-    "@aws-sdk/s3-request-presigner": "^3.458.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.460.0",
+    "@aws-sdk/client-s3": "^3.460.0",
+    "@aws-sdk/client-sqs": "^3.460.0",
+    "@aws-sdk/credential-providers": "^3.460.0",
+    "@aws-sdk/s3-request-presigner": "^3.460.0",
     "@neondatabase/serverless": "^0.6.0",
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
-    "langchain": "0.0.196",
+    "langchain": "^0.0.198",
     "neon-sdk": "^1.15.0",
     "pg": "^8.11.3",
     "pgvector": "^0.1.5",
-    "replicate": "^0.21.1",
+    "replicate": "^0.22.0",
     "youtube-transcript": "^1.0.6",
     "youtubei.js": "^7.0.0",
     "zod": "^3.22.4"
