--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.4.0
+version: 1.4.1
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -74,7 +74,7 @@ dependencies:
   cached_network_image: ^3.3.0
   image_gallery_saver: ^2.0.3
   flutter_inappwebview: ^5.8.0
-  flutter_markdown: ^0.6.18+2
+  flutter_markdown_selectionarea: ^0.6.17+1
   freezed_annotation: ^2.4.1
 
 dev_dependencies:
