--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -100,12 +100,16 @@ jobs:
         name: Setup Apple Auth Key
         run: |
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
+      - name: Rename website .env file so sveletekit can find it during build
+        run: mv packages/website/.env.example packages/website/.env
       - name: Build workspaces
         run: pnpm run -r --parallel build
       - name: Typecheck workspace
         run: pnpm run typecheck:all
       - name: Lint workspace
         run: pnpm run lint:all
+      - name: Remove website .env file so it doesn't get picked up by the deploy
+        run: rm packages/website/.env
       - id: sst_deploy
         name: Deploy to AWS
         run: pnpm run deploy prod
