--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -101,8 +101,10 @@ jobs:
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - name: Rename website .env file so sveletekit can find it during build
         run: mv packages/website/.env.example packages/website/.env
-      - name: Build workspace
-        run: pnpm run build:all
+      - name: Build SST
+        run: pnpm sst build --stage pr-${{ github.event.pull_request.number }}
+      - name: Build workspaces
+        run: pnpm run -r --parallel build
       - name: Typecheck workspace
         run: pnpm run typecheck:all
       - name: Lint workspace
@@ -111,7 +113,7 @@ jobs:
         run: rm packages/website/.env
       - id: sst_deploy
         name: Deploy to AWS
-        run: pnpm run deploy pr-${{ github.event.pull_request.number }}
+        run: pnpm sst deploy --stage pr-${{ github.event.pull_request.number }} --from .sst/dist
       - id: extract_website_url
         name: Extract website URL
         run: |
