--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -100,7 +100,7 @@ jobs:
         run: |
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - name: Build SST
-        run: pnpm sst build --stage pr-${{ github.event.pull_request.number }}
+        run: pnpm sst build --stage pr-${{ github.event.pull_request.number }} --to .sst/dist/
       - name: Rename website .env file so sveletekit can find it during build
         run: mv packages/website/.env.example packages/website/.env
       - name: Build workspaces
@@ -113,7 +113,7 @@ jobs:
         run: rm packages/website/.env
       - id: sst_deploy
         name: Deploy to AWS
-        run: pnpm sst deploy --stage pr-${{ github.event.pull_request.number }} --from .sst/dist
+        run: pnpm sst deploy --stage pr-${{ github.event.pull_request.number }} --from .sst/dist/
       - id: extract_website_url
         name: Extract website URL
         run: |
