--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -101,7 +101,7 @@ jobs:
         run: |
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - name: Build SST
-        run: pnpm sst build --stage prod
+        run: pnpm sst build --stage prod --to .sst/dist/
       - name: Rename website .env file so sveletekit can find it during build
         run: mv packages/website/.env.example packages/website/.env
       - name: Build workspaces
@@ -114,4 +114,4 @@ jobs:
         run: rm packages/website/.env
       - id: sst_deploy
         name: Deploy to AWS
-        run: pnpm sst deploy --stage prod --from .sst/dist
+        run: pnpm sst deploy --stage prod --from .sst/dist/
