--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -102,16 +102,20 @@ jobs:
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - name: Build SST
         run: pnpm sst build --stage prod --to .sst/dist/
-      - name: Rename website .env file so sveletekit can find it during build
-        run: mv packages/website/.env.example packages/website/.env
+      - name: Rename website & auth UI .env file so svelte-kit can find it during build
+        run: |
+          mv packages/website/.env.example packages/website/.env
+          mv packages/auth-ui/.env.example packages/auth-ui/.env
       - name: Build workspaces
         run: pnpm run -r --parallel build
-      - name: Typecheck workspace
+      - name: Type check workspace
         run: pnpm run typecheck:all
       - name: Lint workspace
         run: pnpm run lint:all
-      - name: Remove website .env file so it doesn't get picked up by the deploy
-        run: rm packages/website/.env
+      - name: Remove website & auth UI .env file so it doesn't get picked up by the deploy
+        run: |
+          rm packages/website/.env
+          rm packages/auth-ui/.env
       - id: sst_deploy
         name: Deploy to AWS
         run: pnpm sst deploy --stage prod --from .sst/dist/
