--- a/packages/auth-ui/package.json
+++ b/packages/auth-ui/package.json
@@ -11,7 +11,7 @@
 		"preview:sst": "sst bind 'vite preview'",
 		"typecheck": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"typecheck:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"lint": "eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
