--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -15,9 +15,10 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@iconify/svelte": "^3.1.4",
-		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/kit": "^1.29.1",
+		"@iconify/svelte": "^3.1.6",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.2",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/autosize": "^4.0.3",
 		"@types/validator": "^13.11.7",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -25,8 +26,8 @@
 		"autoprefixer": "^10.4.16",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
-		"daisyui": "^4.4.19",
-		"eslint": "^8.55.0",
+		"daisyui": "^4.4.20",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.32",
@@ -36,7 +37,7 @@
 		"svelte-check": "^3.6.2",
 		"svelte-copy": "^1.4.1",
 		"svelte-intersection-observer": "^0.10.1",
-		"svelte-kit-sst": "2.38.6",
+		"svelte-kit-sst": "2.38.7",
 		"svelte-share-buttons-component": "^2.0.0",
 		"tailwind-merge": "^2.1.0",
 		"tailwindcss": "^3.3.6",
@@ -44,17 +45,17 @@
 		"tailwindcss-brand-colors": "^0.3.6",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.8"
+		"vite": "^5.0.10"
 	},
 	"type": "module",
 	"dependencies": {
 		"@revelationsai/core": "workspace:*",
-		"@tanstack/svelte-query": "^5.13.4",
+		"@tanstack/svelte-query": "^5.14.1",
 		"ai": "^2.2.29",
 		"autosize": "^6.0.1",
 		"marked": "^11.1.0",
 		"moment": "^2.29.4",
-		"stripe": "^14.8.0",
+		"stripe": "^14.9.0",
 		"uuid": "^9.0.1",
 		"validator": "^13.11.0"
 	}
