Add environment variables for Upstash and Axiom

--- a/.env.example
+++ b/.env.example
@@ -54,5 +54,10 @@ NEW_RELIC_ACCOUNT_ID=4177830
 NEW_RELIC_TRUSTED_ACCOUNT_KEY=4177830
 NEW_RELIC_LICENSE_KEY_SECRET_ARN=
 
+# Upstash
 UPSTASH_REDIS_URL=
 UPSTASH_REDIS_TOKEN=
+
+# Axiom
+AXIOM_TOKEN=
+AXIOM_DATASET=
