--- a/packages/auth-ui/package.json
+++ b/packages/auth-ui/package.json
@@ -53,7 +53,7 @@
 		"@tanstack/svelte-query": "^5.14.1",
 		"ai": "^2.2.29",
 		"autosize": "^6.0.1",
-		"moment": "^2.29.4",
+		"dayjs": "^1.11.10",
 		"uuid": "^9.0.1",
 		"validator": "^13.11.0"
 	}
