--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -53,8 +53,8 @@
 		"@tanstack/svelte-query": "^5.14.1",
 		"ai": "^2.2.29",
 		"autosize": "^6.0.1",
+		"dayjs": "^1.11.10",
 		"marked": "^11.1.0",
-		"moment": "^2.29.4",
 		"stripe": "^14.9.0",
 		"uuid": "^9.0.1",
 		"validator": "^13.11.0"
