Update dependencies and add lambda layers, switch to ARM

--- a/lambda-layers/chromium/package.json
+++ b/lambda-layers/chromium/package.json
@@ -6,6 +6,6 @@
   "keywords": [],
   "author": "Ian Pascoe",
   "dependencies": {
-    "argon2": "^0.31.2"
+    "@sparticuz/chromium": "^119.0.2"
   }
 }
