--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -54,6 +54,7 @@
 		"ai": "^2.2.31",
 		"autosize": "^6.0.1",
 		"dayjs": "^1.11.10",
+		"fast-xml-parser": "^4.3.3",
 		"marked": "^11.1.1",
 		"stripe": "^14.11.0",
 		"uuid": "^9.0.1",
