Add PolyScale caching

--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -18,6 +18,8 @@ env:
 
   NEON_API_KEY: ${{ secrets.NEON_API_KEY }}
 
+  POLY_SCALE_APP_ID: ${{ vars.POLY_SCALE_APP_ID }}
+
   REPLICATE_API_KEY: ${{ secrets.REPLICATE_API_KEY }}
   REPLICATE_IMAGE_MODEL: ${{ vars.REPLICATE_IMAGE_MODEL }}
 
