--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@aws-sdk/credential-providers": "^3.496.0",
     "@aws-sdk/s3-request-presigner": "^3.496.0",
     "@neondatabase/serverless": "^0.7.2",
+    "@polyscale/serverless-js": "^1.4.0",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
     "langchain": "^0.1.5",
     "neon-sdk": "^1.16.0",
     "pg": "^8.11.3",
+    "pg-promise": "^11.5.4",
     "pgvector": "^0.1.7",
     "replicate": "^0.25.2",
     "youtube-transcript": "^1.0.6",
