--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -10,12 +10,12 @@
   },
   "devDependencies": {
     "@sparticuz/chromium": "^119.0.2",
-    "@types/aws-lambda": "^8.10.131",
+    "@types/aws-lambda": "^8.10.132",
     "@types/busboy": "^1.5.3",
     "@types/node": "^20.11.7",
     "@types/nodemailer": "^6.4.14",
-    "sst": "2.39.11",
-    "vitest": "^1.2.1"
+    "sst": "2.39.13",
+    "vitest": "^1.2.2"
   },
   "dependencies": {
     "@middy/core": "^5.2.3",
@@ -32,6 +32,7 @@
     "firebase-admin": "^12.0.0",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
+    "nodemailer": "^6.9.8",
     "openai": "^4.26.0",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.2",
