Add API keys for OpenAI and TogetherAI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,12 @@
     "flushbar",
     "Hnsw",
     "langchain",
+    "mistralai",
+    "Mixtral",
+    "openai",
     "REVENUECAT",
     "Riverpod",
+    "togetherai",
     "unfocus",
     "upstash"
   ],
