--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/cfn-response": "^1.0.8",
     "@types/in-app-purchase": "^1.11.4",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.11.19",
     "@types/pg": "^8.11.0",
     "aws-cdk-lib": "2.124.0",
     "constructs": "10.3.0",
@@ -32,11 +32,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.513.0",
-    "@aws-sdk/client-s3": "^3.513.0",
-    "@aws-sdk/client-sqs": "^3.513.0",
-    "@aws-sdk/credential-providers": "^3.513.0",
-    "@aws-sdk/s3-request-presigner": "^3.513.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.515.0",
+    "@aws-sdk/client-s3": "^3.515.0",
+    "@aws-sdk/client-sqs": "^3.515.0",
+    "@aws-sdk/credential-providers": "^3.515.0",
+    "@aws-sdk/s3-request-presigner": "^3.515.0",
+    "@langchain/community": "^0.0.28",
     "@neondatabase/serverless": "^0.8.1",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
