--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ NEON_API_KEY=
 # Unstructured
 UNSTRUCTURED_API_KEY=
 
+# OpenAI
+OPENAI_API_KEY=
+
+# TogetherAI
+TOGETHERAI_API_KEY=
+
 # Revenue Cat
 REVENUECAT_PROJECT_ID=766c423b
 REVENUECAT_API_KEY=
