--- a/.github/workflows/pr-preview-cleanup.yaml
+++ b/.github/workflows/pr-preview-cleanup.yaml
@@ -13,6 +13,12 @@ env:
 
   UNSTRUCTURED_API_KEY: ${{ secrets.UNSTRUCTURED_API_KEY }}
 
+  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+  GOOGLE_AI_API_KEY: ${{ secrets.GOOGLE_AI_API_KEY }}
+
+  TOGETHERAI_API_KEY: ${{ secrets.TOGETHERAI_API_KEY }}
+
   REVENUECAT_PROJECT_ID: ${{ vars.REVENUECAT_PROJECT_ID }}
   REVENUECAT_API_KEY: ${{ secrets.REVENUECAT_API_KEY }}
   REVENUECAT_WEBHOOK_SECRET: ${{ secrets.REVENUECAT_WEBHOOK_SECRET }}
