--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@aws-sdk/client-sqs": "^3.515.0",
     "@aws-sdk/credential-providers": "^3.515.0",
     "@aws-sdk/s3-request-presigner": "^3.515.0",
-    "@langchain/community": "^0.0.28",
+    "@langchain/community": "^0.0.30",
+    "@langchain/google-genai": "^0.0.10",
+    "@langchain/openai": "^0.0.14",
     "@neondatabase/serverless": "^0.8.1",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
-    "langchain": "^0.1.18",
+    "langchain": "^0.1.20",
     "neon-sdk": "^1.17.0",
     "pg": "^8.11.3",
     "pgvector": "^0.1.8",
