Add Google and Fireworks API keys, update timeout for ChatAPI function

--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,10 @@ UNSTRUCTURED_API_KEY=
 OPENAI_API_KEY=
 
 # Google AI
-GOOGLE_AI_API_KEY=
+GOOGLE_API_KEY=
 
-# TogetherAI
-TOGETHERAI_API_KEY=
+# Fireworks AI
+FIREWORKS_API_KEY=
 
 # Revenue Cat
 REVENUECAT_PROJECT_ID=766c423b
