--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -22,9 +22,9 @@ env:
 
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-  GOOGLE_AI_API_KEY: ${{ secrets.GOOGLE_AI_API_KEY }}
+  GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
-  TOGETHERAI_API_KEY: ${{ secrets.TOGETHERAI_API_KEY }}
+  FIREWORKS_API_KEY: ${{ secrets.FIREWORKS_API_KEY }}
 
   REVENUECAT_PROJECT_ID: ${{ vars.REVENUECAT_PROJECT_ID }}
   REVENUECAT_API_KEY: ${{ secrets.REVENUECAT_API_KEY }}
