Add LANGCHAIN_API_KEY to environment variables

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ IS_LOCAL=true
 # Set to false if you don't want to seed the db every time (will still run on creation)
 DATABASE_SEED=true
 
+# LangSmith
+LANGCHAIN_API_KEY= 
+
 # Neon Database
 NEON_API_KEY=
 
