--- a/.github/workflows/pr-preview-cleanup.yaml
+++ b/.github/workflows/pr-preview-cleanup.yaml
@@ -9,6 +9,8 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+  LANGCHAIN_API_KEY: ${{ secrets.LANGCHAIN_API_KEY }}
+
   NEON_API_KEY: ${{ secrets.NEON_API_KEY }}
 
   UNSTRUCTURED_API_KEY: ${{ secrets.UNSTRUCTURED_API_KEY }}
