--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
-  "exclude": ["packages", "node_modules"],
+  "exclude": ["./packages/**", "node_modules"],
   "compilerOptions": {
     "importsNotUsedAsValues": "error",
     "isolatedModules": true,
