--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -18,6 +18,8 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "@as-integrations/aws-lambda": "^3.1.0",
     "@middy/core": "^5.2.4",
     "@middy/http-cors": "^5.2.4",
     "@middy/http-error-handler": "^5.2.4",
@@ -30,6 +32,7 @@
     "escape-string-regexp": "^5.0.0",
     "fast-xml-parser": "^4.3.4",
     "firebase-admin": "^12.0.0",
+    "graphql": "^16.8.1",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.7.0",
     "nodemailer": "^6.9.9",
