--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "typeRoots": ["./src/types", "../core/src/types"],
     "lib": ["dom", "dom.iterable", "ES2021"],
+    "verbatimModuleSyntax": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "ignoreDeprecations": "5.0",
     "paths": {
@@ -16,5 +16,5 @@
     }
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "./**/__generated__/**/*"]
 }
