--- a/packages/auth-ui/package.json
+++ b/packages/auth-ui/package.json
@@ -56,6 +56,7 @@
 		"ai": "^2.2.37",
 		"autosize": "^6.0.1",
 		"dayjs": "^1.11.10",
+		"graphql-request": "^6.1.0",
 		"uuid": "^9.0.1",
 		"validator": "^13.11.0"
 	}
