--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "@apollo/utils.keyvadapter": "^3.1.0",
+    "@apollo/utils.keyvaluecache": "^3.1.0",
     "@as-integrations/aws-lambda": "^3.1.0",
     "@escape.tech/graphql-armor": "^2.4.0",
     "@graphql-tools/utils": "^10.1.0",
