--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -98,6 +98,8 @@ jobs:
         name: Setup Apple Auth Key
         run: |
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
+      - name: Run Codegen
+        run: pnpm codegen
       - name: Build SST
         run: pnpm sst build --stage prod --to .sst/dist/
       - name: Rename website & auth UI .env file so svelte-kit can find it during build
