--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently  --names \"SST,CodeGen\" -c \"bgYellow,bgBlue,bgMagenta\" \"sst dev\" \"graphql-codegen --watch './graphql/schema.graphql' --watch './codegen.ts'\"",
+    "dev": "concurrently  --names \"SST,CodeGen\" -c \"bgYellow,bgBlue\" \"sst dev\" \"graphql-codegen --watch './graphql/schema.graphql' --watch './codegen.ts'\"",
     "build": "sst build --stage",
     "build:all": "sst build && pnpm run -r --parallel build",
     "deploy": "sst deploy --stage",
@@ -20,6 +20,7 @@
     "codegen:watch": "graphql-codegen --watch './graphql/schema.graphql' --watch './codegen.ts'"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.4.1",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "^4.2.4",
     "@graphql-codegen/introspection": "4.0.3",
@@ -54,6 +55,7 @@
     "@neondatabase/serverless": "^0.9.0",
     "drizzle-orm": "^0.29.4",
     "drizzle-zod": "^0.5.1",
+    "gql.tada": "^1.2.1",
     "langchain": "^0.1.23",
     "neon-sdk": "^1.17.0",
     "pg": "^8.11.3",
