--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,13 @@
     "paths": {
       "@stacks/*": ["./stacks/*"],
       "@stacks": ["./stacks"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "@0no-co/graphqlsp",
+        "schema": "./graphql/schema.graphql",
+        "tadaOutputLocation": "./graphql/"
+      }
+    ]
   }
 }
