Update environment variables and add UpstashRedis resource

--- a/.github/workflows/pr-preview-cleanup.yaml
+++ b/.github/workflows/pr-preview-cleanup.yaml
@@ -47,6 +47,9 @@ env:
   STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
   STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
 
+  UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
+  UPSTASH_API_KEY: ${{ secrets.UPSTASH_API_KEY }}
+
   AXIOM_TOKEN: ${{ secrets.AXIOM_TOKEN }}
   AXIOM_DATASET: ${{ vars.AXIOM_DATASET }}
 
