--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -54,9 +54,8 @@ env:
   STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
   STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
 
-  UPSTASH_REDIS_URL: ${{ secrets.UPSTASH_REDIS_URL }}
-  UPSTASH_REDIS_REST_URL: ${{ vars.UPSTASH_REDIS_REST_URL }}
-  UPSTASH_REDIS_TOKEN: ${{ secrets.UPSTASH_REDIS_TOKEN }}
+  UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
+  UPSTASH_API_KEY: ${{ secrets.UPSTASH_API_KEY }}
 
   AXIOM_TOKEN: ${{ secrets.AXIOM_TOKEN }}
   AXIOM_DATASET: ${{ vars.AXIOM_DATASET }}
