--- a/.env.example
+++ b/.env.example
@@ -57,9 +57,8 @@ STRIPE_API_KEY=
 STRIPE_WEBHOOK_SECRET=
 
 # Upstash
-UPSTASH_REDIS_URL=
-UPSTASH_REDIS_REST_URL=
-UPSTASH_REDIS_TOKEN=
+UPSTASH_EMAIL=
+UPSTASH_API_KEY=
 
 # Axiom
 AXIOM_TOKEN=
