Switching over to using SST config as opposed to env vars

--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -12,7 +12,8 @@
       "@revelationsai/core": ["../core/src"],
       "@revelationsai/core/*": ["../core/src/*"],
       "@revelationsai/server": ["../server/src"],
-      "@revelationsai/server/*": ["../server/src/*"]
+      "@revelationsai/server/*": ["../server/src/*"],
+      "@lib/database": ["../server/src/lib/database"]
     }
   },
   "include": ["**/*.ts"],
