--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -13,7 +13,8 @@
       "@revelationsai/core/*": ["../core/src/*"],
       "@revelationsai/server": ["../server/src"],
       "@revelationsai/server/*": ["../server/src/*"],
-      "@lib/database": ["../server/src/lib/database"]
+      "@lib/database": ["../server/src/lib/database"],
+      "@lib/cache": ["../server/src/lib/cache"]
     }
   },
   "include": ["**/*.ts"],
