--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -86,6 +86,8 @@ jobs:
           mv packages/auth-ui/.env.example packages/auth-ui/.env
       - name: Build SST
         run: bun sst build --stage prod --to .sst/dist/
+      - name: Typecheck workspace
+        run: bun run typecheck:all
       - name: Lint workspace
         run: bun run lint
       - name: Remove website & auth UI .env file so it doesn't get picked up by the deploy
