--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@revelationsai/core/tsconfig.json",
   "compilerOptions": {
-    "typeRoots": ["./src/types", "../core/src/types"],
+    "typeRoots": ["../core/src/types"],
     "lib": ["dom", "dom.iterable", "ES2021"],
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
@@ -14,6 +14,6 @@
       "@revelationsai/core/*": ["../core/src/*"]
     }
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "../core/src/types/**/*.ts"],
   "exclude": ["./node_modules/**"]
 }
