--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@revelationsai/core/tsconfig.json",
   "compilerOptions": {
-    "typeRoots": ["./src/types", "../core/src/types"],
+    "typeRoots": ["../core/src/types"],
     "lib": ["dom", "dom.iterable", "ES2021"],
     "verbatimModuleSyntax": true,
     "allowSyntheticDefaultImports": true,
@@ -17,6 +17,6 @@
       "@lib/cache": ["../server/src/lib/cache"]
     }
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "../core/src/types/**/*.ts"],
   "exclude": ["./node_modules/**"]
 }
