--- a/.github/workflows/pr-preview-cleanup.yaml
+++ b/.github/workflows/pr-preview-cleanup.yaml
@@ -63,6 +63,10 @@ jobs:
       - id: checkout
         name: Checkout
         uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 21
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         with:
