--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
     "remove": "sst remove --stage",
     "console": "sst console",
     "typecheck": "tsc --noEmit",
-    "typecheck:all": "concurrently --names 'root,auth-ui,client,core,functions,server,website' -c 'bgYellow,bgRed,bgBlue,bgBlack,bgCyan,bgGray,bgGreen' 'bun run typecheck' 'bun run --cwd packages/auth-ui typecheck' 'bun run --cwd packages/client typecheck' 'bun run --cwd packages/core typecheck' 'bun run --cwd packages/functions typecheck' 'bun run --cwd packages/server typecheck' 'bun run --cwd packages/website typecheck' ",
+    "typecheck:all": "pnpm run typecheck && pnpm run -r --parallel typecheck",
     "lint": "eslint .",
     "format": "prettier --write .",
     "codegen": "graphql-codegen --config codegen.ts",
     "codegen:watch": "graphql-codegen --watch './graphql/schema.graphql' --watch './codegen.ts'"
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.4.2",
+    "@0no-co/graphqlsp": "^1.7.1",
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^8.57.0",
     "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/client-preset": "^4.2.4",
+    "@graphql-codegen/client-preset": "^4.2.5",
     "@graphql-codegen/introspection": "4.0.3",
     "@graphql-codegen/typescript": "4.0.6",
     "@graphql-codegen/typescript-resolvers": "4.0.6",
     "@parcel/watcher": "^2.4.1",
-    "@tsconfig/node20": "^20.1.2",
+    "@tsconfig/node20": "^20.1.4",
     "@types/cfn-response": "^1.0.8",
     "@types/in-app-purchase": "^1.11.4",
-    "@types/node": "^20.11.24",
-    "@types/pg": "^8.11.2",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "aws-cdk-lib": "2.124.0",
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.11.4",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "aws-cdk-lib": "2.132.1",
     "concurrently": "^8.2.2",
     "constructs": "10.3.0",
     "drizzle-kit": "0.20.14",
@@ -42,30 +42,30 @@
     "graphql": "^16.8.1",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "sst": "2.40.6",
-    "typescript": "^5.3.3",
-    "typescript-eslint": "^7.1.1"
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "sst": "2.41.4",
+    "typescript": "^5.4.3",
+    "typescript-eslint": "^7.4.0"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.525.0",
-    "@aws-sdk/client-s3": "^3.525.0",
-    "@aws-sdk/client-sqs": "^3.525.0",
-    "@aws-sdk/credential-providers": "^3.525.0",
-    "@aws-sdk/s3-request-presigner": "^3.525.0",
-    "@langchain/community": "^0.0.35",
+    "@aws-sdk/client-bedrock-runtime": "^3.540.0",
+    "@aws-sdk/client-s3": "^3.540.0",
+    "@aws-sdk/client-sqs": "^3.540.0",
+    "@aws-sdk/credential-providers": "^3.540.0",
+    "@aws-sdk/s3-request-presigner": "^3.540.0",
+    "@langchain/community": "^0.0.43",
     "@langchain/google-genai": "^0.0.10",
-    "@langchain/openai": "^0.0.16",
+    "@langchain/openai": "^0.0.24",
     "@neondatabase/serverless": "^0.9.0",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "^0.30.5",
     "drizzle-zod": "^0.5.1",
-    "gql.tada": "^1.3.0",
-    "langchain": "^0.1.25",
+    "gql.tada": "^1.4.1",
+    "langchain": "^0.1.30",
     "neon-sdk": "^1.18.0",
     "pg": "^8.11.3",
     "pgvector": "^0.1.8",
-    "svelte2tsx": "^0.7.3",
-    "youtube-transcript": "^1.0.6",
+    "svelte2tsx": "^0.7.5",
+    "youtube-transcript": "^1.1.0",
     "youtubei.js": "^9.1.0",
     "zod": "^3.22.4"
   },
