Update code formatting and model IDs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": "always",
     // "source.addMissingImports": "always", // useful when doing a big refactor
-    "source.organizeImports": "always",
+    "source.organizeImports": "always"
   },
   "cSpell.words": [
     "autocorrect",
